--- a/APIGRAD.html
+++ b/APIGRAD.html
@@ -197,7 +197,7 @@
             formData.append('img', file);
 
             try {
-                const response = await fetch('YOUR_API_GATEWAY_URL', {
+                const response = await fetch('POSTMANAPIURL(NOTREADY)', {
                     method: 'POST',
                     body: formData,
                 });
